Add audit endpoint
